--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --mode development",
+    "build": "vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -16,6 +16,8 @@
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.0",
     "axios": "^1.7.7",
+    "classnames": "^2.5.1",
+    "dotenv": "^16.4.5",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
