--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-transition-group": "^4.4.5",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "underscore": "^1.13.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
